# pytest-xfaillist

./: .flake8  .gitignore  Pipfile  README.md  pyproject.toml  setup.cfg  xfails.list
c/: autotest  develop
pytest_xfaillist/: __init__.py  generate.py  hooks.py  hooks_test.py
