[metadata]
name = pytest-xfaillist
version = 0.1
description = Maintain a xfaillist in an additional file to avoid merge-conflicts.
long_description = file: README.md
url = https://github.com/projectcaluma/pytest-xfaillist
author = Adfinis AG
license = GPL-3.0-or-later
classifiers =
    Framework :: Pytest
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    toml
    pytest

[options.extras_require]
dev =
    black==20.8b1
    pytest
    pdbpp
    isort
    flake8
    flake8-bugbear
    flake8-debugger
    flake8-docstrings
    flake8-isort
    flake8-string-format
    flake8-tuple
    python-language-server
    mypy

[options.entry_points]
pytest11 =
  pytest-xfaillist = pytest_xfaillist.hooks


[flake8]
ignore =
    # line too long (managed by black)
    E501,
    # do not enforce existence of docstrings
    D100,
    D101,
    D102,
    D103,
    D104,
    D105,
    D106,
    D107,
max-line-length = 88
max-complexity = 10
doctests = True

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88
